--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -44,7 +44,7 @@
 		<!-- Jumbotron, w title -->
 		<div class="jumbotron text-center jumbotron-fluid">
 			<div class="container">
-				<h1 class="display-1">Welcome - UmbracoTV</h1>
+				<h1 class="display-1">@Model.Value("pageTitle")</h1>
 				<p>And this is <span class="font-weight-bold">only</span> the beginning.</p>
 			</div>
 		</div>
@@ -56,24 +56,7 @@
 			<div class="row section">
 				<div class="col-md-12">
 
-					<h2>Why Umbraco is a great fit for you as a developer</h2>
-					<p>Are you looking for a CMS that’ll give you full flexibility? 
-						A CMS that doesn’t get in the way of things but instead lets you unfold your talent, ideas and creations in order to build websites that’ll impress - or simply just work as intended. 
-						All while keeping your editor, boss or client happy? Then look no further. 
-						With Umbraco, you get a clean slate Open Source ASP.NET CMS so you can <span class="font-weight-bold">build and extend your website exactly the way you need to.</span></p>
-					<p>We’ve got over 225,000 active developers in our worldwide Umbraco community, who have already embraced the powers and joys of using a flexible CMS.</p>
-
-					<ul>
-						<li>A flexible CMS - do things your way</li>
-						<li>Neat and clean in order to provide you with power</li>
-						<li>Integrate and extend as much as you want</li>
-						<li>How to become an Umbraco developer</li>
-						<li>Access to support from Umbraco HQ developers</li>
-						<li>The page ALL Umbraco developers have bookmarked</li>
-						<li>Our friendly Open Source community</li>
-						<li>A helping (time-saving!) hand: Umbraco Cloud</li>
-						<li>How to continue your Umbraco journey</li>
-					</ul>
+					@Model.Value("bodyText")
 
 				</div>				
 			</div>
@@ -161,39 +144,9 @@
 		<div class="container-fluid footer">
 			<div class="container">
 
-				<div class="row section">
-					<div class="col-md-4">
-						<ul class="footer-links">
-							<h5>Umbraco Resources</h5>
-							<li><a href="#">Developer Documentation</a></li>
-							<li><a href="#">Umbraco.TV</a></li>
-							<li><a href="#">Umbraco HQ Youtube Channel</a></li>
-							<li><a href="#">Training Courses</a></li>
-							<li><a href="#">Umbraco Webinars</a></li>
-						</ul>
-					</div>
-					<div class="col-md-4">
-						<ul class="footer-links">
-							<h5>Meet Umbraco</h5>
-							<li><a href="#">About HQ</a></li>
-							<li><a href="#">Meet the people</a></li>
-							<li><a href="#">Teams</a></li>
-							<li><a href="#">Our Umbraco</a></li>
-							<li><a href="#">Forum</a></li>
-							<li><a href="#">Community Teams</a></li>
-						</ul>
-					</div>
-					<div class="col-md-4 text-center">
-						<ul class="footer-links">
-							<h5>Follow Umbraco</h5>
-							<li><a href="#">Twitter</a></li>
-							<li><a href="#">Facebook</a></li>
-							<li><a href="#">Instagram</a></li>
-						</ul>
-					</div>
-					<div class="text-center">
-						<img src="/images/arm_with_u_logo.png" class="img-fluid" alt="Arm with Umbraco Logo">
-					</div>
+				@Model.Value("footerText", fallback: Fallback.ToDefaultValue, defaultValue: (object)"Copyright Umbraco 2025")
+				<div class="text-center">
+					<img src="/images/arm_with_u_logo.png" class="img-fluid" alt="Arm with Umbraco Logo">
 				</div>
 
 			</div>
