--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -43,8 +43,8 @@
 		<!-- Jumbotron, w title -->
 		<div class="jumbotron text-center jumbotron-fluid">
 			<div class="container">
-				<h1 class="display-1">@Model.Value("pageTitle")</h1>
-				<p>And this is <span class="font-weight-bold">only</span> the beginning.</p>
+				<h1 class="display-1">@Model.Value("title", fallback: Fallback.ToAncestors)</h1>
+				<p>@Model.Value("subtitle", fallback: Fallback.ToAncestors)</p>
 			</div>
 		</div>
 
